Uploaded image for project: 'Lustre'
  1. Lustre
  2. LU-532

2.1 does not filter extended attributes list based on permissions, showing entire list at all times

XMLWordPrintable

    • Icon: Bug Bug
    • Resolution: Fixed
    • Icon: Blocker Blocker
    • Lustre 2.3.0, Lustre 2.1.2
    • Lustre 2.1.0, Lustre 2.2.0, Lustre 2.3.0, Lustre 2.1.2
    • None
    • Client: lustre 1.8.6-wc1
      Servers:
       lustre-2.0.65-2.6.18_238.12.1.el5_lustre_ga34dd87
       lustre-modules-2.0.65-2.6.18_238.12.1.el5_lustre_ga34dd87
       lustre-ldiskfs-3.3.0-2.6.18_238.12.1.el5_lustre_ga34dd87
    • 3
    • 4610

      There seems to be a problem with user_xattr when using 1.8.6-wc1 client with
      newest lustre-master build:

      cd /mnt/lustre/scratch/people/b14flis
      touch test

      mv test /tmp

      mv: getting attribute `trusted.lma' of `trusted.lma': Operation not permitted
      mv: getting attribute `trusted.link' of `trusted.link': Operation not permitted
      mv: getting attribute `trusted.lov' of `trusted.lov': Operation not permitted
      mv: getting attribute `trusted.lma' of `trusted.lma': Operation not permitted
      mv: getting attribute `trusted.link' of `trusted.link': Operation not permitted
      mv: getting attribute `trusted.lov' of `trusted.lov': Operation not permitted

      strace dump:
      ...
      fgetxattr(3, "trusted.link", 0x0, 0) = -1 EPERM (Operation not permitted)
      fgetxattr(3, "trusted.lov", 0x0, 0) = -1 EPERM (Operation not permitted)
      ...
      lgetxattr("test", "trusted.lma", 0x0, 0) = -1 EPERM (Operation not permitted)
      ...
      lgetxattr("test", "lustre.lov", "\xd0\x0b\xd1\x0b\x01\x00\x00\x00E\x1d\x00\x00\x00\x00\x00\x00\xe2\x00/\x00\x02\x00\x00\x00\x00\x00\x10\x00\x01\x00\x00\x00nE\x0b\x00\x00\x00\x00\x00\x00\x00\x00\x00\x00\x00\x00\x00\x00\x00\x00\x00\x0c\x00\x00", 56) = 56
      lsetxattr("/tmp/test", "lustre.lov", "\xd0\x0b\xd1\x0b\x01\x00\x00\x00E\x1d\x00\x00\x00\x00\x00\x00\xe2\x00/\x00\x02\x00\x00\x00\x00\x00\x10\x00\x01\x00\x00\x00nE\x0b\x00\x00\x00\x00\x00\x00\x00\x00\x00\x00\x00\x00\x00\x00\x00\x00\x00\x0c\x00\x00", 56, 0) = -1 EOPNOTSUPP (Operation not supported)
      getxattr("test", "system.posix_acl_access", 0x7fff6edfae60, 132) = -1 ENODATA (No data available)

      serwer side error:

      Lustre: 10440:0:(mdt_xattr.c:374:mdt_reint_setxattr()) client miss to set OBD_MD_FLCTIME when setxattr: [object [0x2002f0053:0x38:0x0]] [valid 68719476736]

      mount options:
      MDT:
      /dev/mapper/scratch-mdt on /mnt/lustre/scratch-mdt type lustre (rw,acl,user_xattr)

      Client:
      172.16.126.1@tcp:/scratch on /mnt/lustre/scratch type lustre (rw,nosuid,nodev,user_xattr,localflock,acl)

      We can supply more information if needed.


      Lukasz Flis
      ACC Cyfronet AGH
      Poland

            yong.fan nasf (Inactive)
            lflis Lukasz Flis
            Votes:
            0 Vote for this issue
            Watchers:
            7 Start watching this issue

              Created:
              Updated:
              Resolved: